# audiov

./: Cargo.toml  README.md  config.example.toml
contrib/fcitx5-audiov/: CMakeLists.txt  README.md  audiovfcitx5.conf  audiovfcitx5.cpp  install-user.sh  restart-fcitx5.sh
src/: config.rs  hotkey.rs  kglobalaccel.rs  lib.rs  lid.rs  logging.rs  main.rs  output.rs  pipeline.rs  preflight.rs  recorder.rs  whisper_cpp.rs  whisper_remote.rs
