[package]
name = "audiov"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
whisper-rs = { version = "0.15.1", features = ["cuda"] }
nix = { version = "0.29", features = ["signal"] }
hound = "3"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "multipart", "rustls-tls"] }
zbus = "4"

[dev-dependencies]
tempfile = "3"
